# podcast-to-skills

./: .gitignore  AGENTS.md  README.md  WORKFLOW.md  podcasts.jsonl.example  pyproject.toml
.agents/skills/podcast-batch-convert/: SKILL.md
.agents/skills/podcast-extract-candidates/: SKILL.md
.agents/skills/podcast-fetch-episode/: SKILL.md
.agents/skills/podcast-generate-skills/: SKILL.md
.agents/skills/podcast-preflight/: SKILL.md
.agents/skills/podcast-report-cleanup/: SKILL.md
.agents/skills/podcast-review-skills/: SKILL.md
.agents/skills/podcast-transcribe-episode/: SKILL.md
docs/methods/: skill-distillation.md  skill-review-rubric.md
scripts/: __init__.py  fetch_episode.py  transcribe.py
scripts/transcription/: __init__.py  chunks.py  engines.py  job.py  profiles.py
tests/: __init__.py  test_fetch_episode.py  test_transcribe.py  test_transcription_chunks.py  test_transcription_engines.py  test_transcription_job.py  test_transcription_profiles.py
